fixed weird overflow problem again, wrote article

--- a/src/app/styles/ArticleGrid.css
+++ b/src/app/styles/ArticleGrid.css
@@ -8,7 +8,7 @@
     column-gap: 2vw;
     row-gap: 3vw;
     margin-bottom: 10vh;
-    max-width: 100%;
+    max-width: 100vw;
 }
 
 @media (max-width: 700px) {
