--- a/src/app/styles/ArticleGuide.css
+++ b/src/app/styles/ArticleGuide.css
@@ -10,6 +10,7 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-top: 2vh;
     padding-bottom: 2vh;
+    padding-right: 4vw;
 }
 
 .full h2, .full h3 {
