--- a/src/app/styles/Header.css
+++ b/src/app/styles/Header.css
@@ -1,9 +1,8 @@
 .header {
     height: fit-content;
-    width: 100vw;
-    max-width: 100vw;
-    min-width: 100vw;
-    background-color: rgb(107, 18, 18);
+    width: 100%;
+    max-width: 100%;
+    background-color: #bb3332;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
@@ -14,6 +13,9 @@
 
 #grand {
     display: flex;
+    justify-content: center;
+    width: 100%;
+    max-width: 100%;
 }
 
 #login, #about {
@@ -38,9 +40,7 @@
     margin: 0;
     padding: 0;
     border: 0;
-    text-align: center;
     display: flex;
-    justify-content: center;
 }
 
 #title p {
@@ -48,6 +48,7 @@
     font-weight: 700;
     color: #ffffff;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
 }
 
 #about:hover, #login:hover {
