--- a/src/app/styles/Wrapper.css
+++ b/src/app/styles/Wrapper.css
@@ -1,3 +1,5 @@
 #wrapper {
-    overflow: visible;
+    overflow: auto;
+    width: 100%;
+    max-width: 100%;
 }
